# verified-storage

./: CMakeLists.txt  LICENSE  README.md  commands_for_reference.txt
constants/: CMakeLists.txt
constants/src/constants/: alias.hpp  enums.hpp  macros.hpp
keccak/: CMakeLists.txt
keccak/src/keccak/: keccak_buffer.cpp  keccak_buffer.hpp
rlp/: CMakeLists.txt
rlp/src/rlp/codec/: rlpdecode.cpp  rlpdecode.hpp  rlpencode.cpp  rlpencode.hpp
rlp/src/rlp/items/: rlplist.cpp  rlplist.hpp  rlpstring.cpp  rlpstring.hpp
sha256/: CMakeLists.txt
sha256/src/sha256/: sha256.cpp  sha256.hpp
storage/: CMakeLists.txt
storage/src/storage/core/: vtrie.cpp  vtrie.hpp
storage/src/storage/db/: db.cpp  db.hpp
storage/src/storage/nodes/: branch.cpp  branch.hpp  extension.cpp  extension.hpp  leaf.cpp  leaf.hpp  node.cpp  node.hpp
storage/src/storage/utils/: aliasadvance.hpp  batchdbop.cpp  batchdbop.hpp  foundnode.cpp  foundnode.hpp  nodeutils.cpp  nodeutils.hpp  path.cpp  path.hpp
test/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt
utils/src/utils/: generalised.hpp  hex.cpp  hex.hpp  nibbles.cpp  nibbles.hpp
